--- a/produits.html
+++ b/produits.html
@@ -13,8 +13,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="produits.css">
-  <title>Nos produits</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Cornfood - Nos produits</title>
 </head>
 <body>
   <header>
@@ -80,14 +80,14 @@
         </button>
       </div>
     </section>
-    <section class="d-flex my-5 py-5 flex-column" id="other-products">
+    <section class="d-flex my-5 py-5 flex-column" id="other-product">
       <div class="d-flex mb-5 justify-content-center">
         <h2>Produits à découvrir</h2>
       </div>
 
       <div class="items d-flex justify-content-around flex-md-row flex-column">
         <article class="d-flex flex-column align-items-center">
-          <img src="images/Image 1.png" alt="">
+          <a href="./produit.html"><img src="images/Image 1.png" alt=""></a>
           <h3>Barre protéinée</h3>
           <p>1,05€</p>
         </article>
@@ -155,6 +155,32 @@
       </div>
     </section>
   </main>
+  <footer class="pt-5">
+    <div class="container">
+      <div class="d-flex pb-3 flex-row justify-content-around">
+        <div class="contact d-flex flex-column justify-content-around">
+          <h2>Nous contacter</h2>
+          <p>35 rue Marengo 13006 Marseille</p>
+          <div class="media-icons d-flex justify-content-around">
+            <img src="./images/logo-facebook.png" alt="">
+            <img src="./images/logo-instagram.png" alt="">
+            <img src="./images/logo-messenger.png" alt="">
+          </div>
+        </div>
+        <div class="form-contact">
+          <form action="" class="d-flex flex-column">
+            <input class="p-3" type="text" name="Nom" placeholder="Nom" id="">
+            <input class="p-3" type="text" name="Email" placeholder="Email" id="">
+            <textarea class="p-3" name="Message" placeholder="Message" rows="5" cols="33" id=""></textarea>
+          </form>
+          <button class="alt-button">Envoyer</button>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center" id="copyright">
+        <span class="py-4">2019 © Cornfood -by La Passerelle</span>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
     integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
